# impact_data_extraction

./: README.md  evaluator.py  pyproject.toml
annotations/: annotations_clean.csv  annotations_corrected.csv  annotations_corrected_main.csv  annotations_corrected_sub.csv  annotations_original.csv  annotations_original_main.csv  annotations_original_sub.csv  annotations_raw.csv  articles.csv  clean_annotations.py
articles/text/1775 Newfoundland hurricane/: content.csv  table_0.csv  table_1.csv
articles/text/1876 San Felipe hurricane/: content.csv  table_0.csv
articles/text/1888 Moradabad hailstorm/: content.csv
articles/text/1893 San Roque hurricane/: content.csv  table_0.csv  table_3.csv
articles/text/1899 San Ciriaco hurricane/: content.csv  table_0.csv  table_1.csv  table_2.csv
articles/text/1902–1919 Pacific typhoon seasons/: content.csv  table_0.csv  table_1.csv  table_10.csv  table_11.csv  table_12.csv  table_13.csv  table_14.csv  table_15.csv  table_16.csv  table_17.csv  table_2.csv  table_3.csv  table_4.csv  table_5.csv  table_6.csv  table_7.csv  table_8.csv  table_9.csv
articles/text/1922 Shantou typhoon/: content.csv  table_0.csv  table_1.csv
data/: UNSD — Methodology.csv
evaluation_results/double_annotations_all/: average_scores.json  avg_per_event_id_results.csv  weighted_scores.csv
evaluation_results/double_annotations_main/: average_scores.json  avg_per_event_id_results.csv  weighted_scores.csv
evaluation_results/double_annotations_sub/: average_scores.json  avg_per_event_id_results.csv  weighted_scores.csv
evaluator/: comparer.py  normaliser.py  weights.py
location_rag/: build_textual_gadm.py  get_gids.py  textify_gadm.py
normalizer/: normalize_locations.py  normalize_numbers.py  normalize_utils.py
prompter/: example.py  extract_impacts.py  json_output.py  outformer_example.py  prompts.py  schema.py
tests/: test_normalize_locations.py  test_normalize_numbers.py
utils/: spacy_utils.py
(+1040 files in other folders)
