[project]
name = "impact-data-extraction"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">3.9,<=3.11"
dependencies = [
    "spacy (>=3.8.7,<4.0.0)",
    "iso4217 (>=1.14.20250512,<2.0.0)",
    "num2words (>=0.5.14,<0.6.0)",
    "text2num (>=3.0.0,<4.0.0)",
    "regex (>=2025.9.1,<2026.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "jsonformer (>=0.12.0,<0.13.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "transformers (==4.48.3)",
    "torch (>=2.8.0,<3.0.0)",
]

[tool.poetry]
package-mode = true
packages = [{include = "normalizer"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
