[project]
name = "impact-data-extraction"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python =  ">=3.10,<=3.11"
dependencies = [
    "spacy (>=3.8.7,<4.0.0)",
    "iso4217 (>=1.14.20250512,<2.0.0)",
    "num2words (>=0.5.14,<0.6.0)",
    "text2num (>=3.0.0,<4.0.0)",
    "regex (>=2025.9.1,<2026.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "transformers (==4.51.3)",
    "torch (>=2.7.1,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "outformer (>=0.1.3,<0.2.0)",
    "accelerate (>=1.10.1,<2.0.0)",
]

[tool.poetry]
package-mode = true
packages = [{include = "normalizer"}]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118/"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "torch"}
